Restructure to use Mac ARM64 LWJGL libraries and inject Java 25 into app bundle